# kinova_imitation_ros

./: .gitignore  .gitmodules  README.md  rosinstall
kinova_imitation/: CMakeLists.txt  package.xml
kinova_imitation_common/: CMakeLists.txt  package.xml  setup.py
kinova_imitation_common_msgs/: CMakeLists.txt  package.xml
kinova_imitation_common_msgs/msg/: ClassificationResults.msg  HumanSkeleton.msg  HumanSkeletonArray.msg  RectWithFeature.msg  RectWithFeatureArray.msg
kinova_imitation_fg/: CMakeLists.txt  README.md  package.xml  requirements.in  setup.py
kinova_imitation_fg/node_scripts/: fg_node.py
kinova_imitation_fg/sample/: sample_foreground_detection.launch  sample_fruit_detection.launch
kinova_imitation_fg/scripts/: install_sample_data.py  install_trained_data.py
kinova_imitation_perception/: CMakeLists.txt  package.xml
kinova_imitation_perception/launch/: euclidean_test.launch  fg_to_box.launch  human_skeleton_to_laban.launch  instance_segmentation.launch  plane_extraction.launch  republish_images.launch  xtion.launch
kinova_imitation_perception/node_scripts/: human_skeleton_to_laban.py  people_pose_estimation.py  skeleton_with_depth.py  wrist_point.py
kinova_imitation_perception/sample/: sample_clip_classifier.launch  sample_human_skeleton_to_laban.launch
kinova_imitation_perception/sample/config/: people_pose_estimation_2d.rviz  people_pose_estimation_for_hsr.rviz
kinova_imitation_perception/sample/include/: play_rosbag_people.xml
kinova_imitation_perception/scripts/: install_sample_data.py  install_trained_data.py
kinova_imitation_perception/scripts/clip/: linear_probe_mydataset.py  make_dataset.py
kinova_imitation_sim/: CMakeLists.txt  package.xml
kinova_imitation_sim/config/: sim.rviz
kinova_imitation_sim/launch/: test.launch
kinova_imitation_sim/scripts/: reset_pose.py
kinova_motor_control/: CMakeLists.txt  package.xml
kinova_motor_control/node_scripts/: compute_kinematics.py  controller.py  gripper_low_level_command.py  print_skeleton.py  sequence.py  test.py  test_gripper.py  test_kortex_api.py  torque_control.py  twist_command.py  visuo_servo.py
kinova_motor_control/utils/: utilities.py
kinova_teleop/: CMakeLists.txt  package.xml
kinova_teleop/launch/: arm_gen3_teleop.launch
kinova_teleop/src/: gripper_command.cpp  velocity_control_with_ik.cpp
kinova_test/: CMakeLists.txt  package.xml
kinova_test/src/: backup.cpp  controller.cpp  high_level_velocity.cpp  kdl_test.cpp  twist_command.cpp  velocity_controller.cpp
kinova_test/urdf/: gen3_robotiq_2f_140.urdf
