<?xml version="1.0"?>
<package format="3">

  <name>kinova_imitation</name>
  <version>0.0.1</version>
  <description>Metapackage for Kinova Gen3 Imitation</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>kinova_imitation_common</exec_depend>
  <exec_depend>kinova_imitation_msgs</exec_depend>
  <exec_depend>kinova_imitation_perception</exec_depend>
  <exec_depend>kinova_teleop</exec_depend>
  <!-- <exec_depend>kinova_imitation_demo</exec_depend> -->
  <!-- <exec_depend>kinova_motor_control</exec_depend> -->

  <export>
    <metapackage/>
  </export>

</package>
