<?xml version="1.0"?>
<package format="3">

  <name>kinova_imitation_common</name>
  <version>0.0.1</version>
  <description>The common package for kinova_imitation</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>kinova_imitation_common_msgs</exec_depend>
  <exec_depend>python3-shapely</exec_depend>

</package>
