<?xml version="1.0"?>
<package format="3">
  <name>kinova_imitation_fg</name>
  <version>0.0.1</version>
  <description>The foreground segmentation package for kinova_imitation</description>

  <maintainer email="oh@jsk.imi.i.u-tokyo.ac.jp">Jihoon Oh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>kinova_imitation_common_msgs</build_depend>
  <build_depend>jsk_data</build_depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>kinova_imitation_common_msgs</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_topic_tools</exec_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
